--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
       <section class="links">
-        <h2 class="links__header">На связи</h2>
+        <h2 class="links__header">На связи 24/7</h2>
         <ul class="links__container">
           <li class="links__link">
             <p class="links__title">Телеграм</p>
@@ -43,7 +43,7 @@
       </section>
     </main>
     <footer>
-      <button type = "button" class="button-link" href=""> Личный совет </button>
+      <button type = "button" class="button-link" href=""> Личный совет если нужен) </button>
     </footer>
     <script type="text/javascript" src="js.js"></script>
   </body>
